@@ -3297,18 +3297,57 @@ operator|==
 literal|null
 condition|)
 block|{
+name|loginUserFromSubject
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|loginUser
+return|;
+block|}
+comment|/**    * Log in a user using the given subject    * @parma subject the subject to use when logging in a user, or null to     * create a new subject.    * @throws IOException if login fails    */
+annotation|@
+name|InterfaceAudience
+operator|.
+name|Public
+annotation|@
+name|InterfaceStability
+operator|.
+name|Evolving
+specifier|public
+specifier|synchronized
+DECL|method|loginUserFromSubject (Subject subject)
+specifier|static
+name|void
+name|loginUserFromSubject
+parameter_list|(
+name|Subject
+name|subject
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|ensureInitialized
 argument_list|()
 expr_stmt|;
 try|try
 block|{
-name|Subject
+if|if
+condition|(
 name|subject
-init|=
+operator|==
+literal|null
+condition|)
+block|{
+name|subject
+operator|=
 operator|new
 name|Subject
 argument_list|()
-decl_stmt|;
+expr_stmt|;
+block|}
 name|LoginContext
 name|login
 init|=
@@ -3502,10 +3541,6 @@ name|loginUser
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-return|return
-name|loginUser
-return|;
 block|}
 annotation|@
 name|InterfaceAudience
